# castles

./: CMakeLists.txt
src/: assets_loader.cpp  assets_loader.hpp  main.cpp  sdl_pc_main.cpp
src/application/: application.cpp  application.hpp
src/application/sdl/: sdl_application.cpp  sdl_application.hpp  sdl_pc_application.cpp  sdl_pc_application.hpp  sdl_small_guards.hpp
src/game/: game_map.cpp  game_map.hpp  tile.hpp  units.hpp
src/graphics/: assets_loader.hpp  fs_assets_loader.cpp  fs_assets_loader.hpp  game_renderer.hpp  render_layer.hpp
src/graphics/sdl/: sdl_assets_loader.cpp  sdl_assets_loader.hpp  sdl_game_renderer.cpp  sdl_game_renderer.hpp  sdl_render_layer.cpp  sdl_render_layer.hpp  sdl_renderer.cpp  sdl_renderer.hpp  sdl_surface.cpp  sdl_surface.hpp  sdl_texture.cpp  sdl_texture.hpp  sdl_window.cpp  sdl_window.hpp  sdlrenderer.cpp  sdlrenderer.hpp  sdlsurface.hpp  sdlwindow.cpp  sdlwindow.hpp  sdlwrap.hpp
src/graphics/sdl/layers/: sdl_game_layer.cpp  sdl_game_layer.hpp  sdl_render_layer.hpp
src/include/: defines.hpp
src/input/: input_handler.hpp
src/input/sdl/: sdl_input_handler.cpp  sdl_input_handler.hpp
src/sdl/: sdl_small_guards.hpp
src/sdlwrap/: sdl_include.hpp  sdlrenderer.cpp  sdlrenderer.hpp  sdlsmallguards.hpp  sdlsurface.cpp  sdltexture.cpp  sdltexture.hpp  sdlwindow.cpp  sdlwindow.hpp  sdlwrap.hpp
